tests/basic/post/assert/002.pan.out
tests/basic/post/assert/002.pan:4:1-4: error: cannot solve constraints of f02